--- a/src/components/Dialogs/ContourDialog/ContourDialogComponent.scss
+++ b/src/components/Dialogs/ContourDialog/ContourDialogComponent.scss
@@ -33,17 +33,18 @@
         .bp3-form-group.bp3-inline {
             .bp3-form-content {
                 display: inline-flex;
-                width: calc(100% - 8em - 15px);
+                width: calc(100% - 8em - 15px); // because of the popover, we need the subtractions
                 max-width: fit-content;
             }
         }
 
-        .bp3-button:not([class*="bp3-intent-"]) {
+        .bp3-button:not([class*="bp3-intent-"]).bp3-align-right{
             white-space: nowrap;
             width: 100%;
 
             .bp3-button-text {
                 overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
 
