--- a/src/components/Dialogs/FittingDialog/FittingDialogComponent.scss
+++ b/src/components/Dialogs/FittingDialog/FittingDialogComponent.scss
@@ -6,6 +6,14 @@
         margin-bottom: 0px;
     }
 
+    .bp3-html-select select,
+    .bp3-select select {
+        width: 100%;
+        min-width: 7em;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     .SplitPane {
         position: inherit !important;
         height: calc(100% - 40px - 65px) !important; // dialog h - heading h - pinned inputs h
