--- a/src/components/Dialogs/VectorOverlayDialog/VectorOverlayDialogComponent.scss
+++ b/src/components/Dialogs/VectorOverlayDialog/VectorOverlayDialogComponent.scss
@@ -8,12 +8,13 @@
             text-align: right;
         }
 
-        .bp3-button:not([class*="bp3-intent-"]) {
+        .bp3-button:not([class*="bp3-intent-"]).bp3-align-right {
             white-space: nowrap;
             width: 100%;
 
             .bp3-button-text {
                 overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
 
@@ -60,7 +61,7 @@
 
         .bp3-form-content {
             display: inline-flex;
-            width: calc(100% - 6em);
+            width: calc(100% - 7em); // because of popover component, the subtraction of the text label width is required
             max-width: fit-content;
         }
     }
