--- a/src/components/PvGenerator/PvGeneratorComponent.scss
+++ b/src/components/PvGenerator/PvGeneratorComponent.scss
@@ -33,10 +33,18 @@
 
         .bp3-form-group {
             .bp3-label {
-                min-width: 14em;
-                width: 14em;
+                min-width: 13em;
+                width: 13em;
                 text-align: right;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
+        }
+
+        .bp3-html-select select, .bp3-select select {
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .label-info-group {
@@ -45,7 +53,7 @@
             }
 
             .label-info {
-                max-width: calc(100% - 55px);
+                max-width: calc(100% - 92px);
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap;
