--- a/src/components/SpectralProfiler/ProfileFittingComponent/ProfileFittingComponent.scss
+++ b/src/components/SpectralProfiler/ProfileFittingComponent/ProfileFittingComponent.scss
@@ -1,4 +1,9 @@
 .profile-fitting-panel {
+
+    .bp3-popover2-target {
+        display: block;
+    }
+
     .profile-fitting-form {
         .bp3-form-group {
             &:first-of-type {
